Name:                ordinal-gitit-plugin
Version:             0.0.0
Cabal-Version:       >= 1.2
Synopsis:            Gitit plugin: Format ordinals like 21st
Category:            Text
Description:
  Gitit plugin: Format ordinals like 21st
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2010 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Package-Url:         http://github.com/conal/ordinal-gitit-plugin

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, gitit
  Exposed-Modules:     
                       Network.Gitit.Plugin.Ordinal
                       
  ghc-options:         -Wall
